# OB-hybrid

./: .env.example  .markdownlint-cli2.yaml  .prettierignore  eslint.config.mjs  package-lock.json  package.json  render.yaml
poc-eval-harness/: .gitignore  README.md  pyproject.toml
poc-eval-harness/agent/: __init__.py  agent.py
poc-eval-harness/campaigns/: proto-manifest.json
poc-eval-harness/config/: config_loader.py  run_config.toml
poc-eval-harness/data/: Notes-for-Tamar-2026-06-02.xlsx  README.md
poc-eval-harness/harness/: __main__.py  account_context.py  cli.py  cursor_bridge.py  demo_app.py  freeze.py  interactive.py  manifest.py  profile_loader.py  providers.py  records.py  runner.py  sales_notes.py  session.py  wiring.py
poc-eval-harness/kernel/: __init__.py  llm.py  protocol.py  schema.py  state.py  tools.py  trace.py
poc-eval-harness/onboarding_demo/: __init__.py  context_api.py  llm_copy.py  make_sample_data.py  sample-accounts.xlsx  server.py
poc-eval-harness/schema/: guesty-pro-account-creation-schema.md
poc-eval-harness/scoring/: __init__.py  metrics.py  rater_queue.py  report.py  resolver.py  sar.py  stats.py
poc-eval-harness/simulator/: __init__.py  simulator.py
poc-eval-harness/tests/: conftest.py  test_agent_echo_events.py  test_agent_hero_branch.py  test_agent_invariants.py  test_agent_next_slot.py  test_agent_s5.py  test_cli.py  test_config.py  test_config_snapshots.py  test_false_write.py  test_llm.py  test_manifest.py  test_metrics.py  test_rater_queue.py  test_report.py  test_resolver.py  test_runner.py  test_sales_notes.py  (+9 more)
(+574 files in other folders)
