[project]
name = "poc-eval-harness"
version = "0.1.0"
description = "AI Adaptive Onboarding PoC — offline, file-based eval harness (H1 + H2)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Amelia (harness engineer)" }]

# Pins follow architecture §1 (verified 2026-06-02). Exact pins on the LLM SDKs
# (provider-decorrelation, FR-21) and a v2 floor on Pydantic; the resolved
# uv.lock is the freeze-manifest artifact (D-5 / NFR-4).
dependencies = [
    "anthropic==0.105.2",
    "openai==2.40.0",
    "pydantic>=2.9,<3",
    "duckdb>=1.1,<2",
    "numpy>=2.1,<3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.7,<1",
]

# Treated as an application/harness, not a distributable library — uv manages the
# environment + lockfile but does not build/install this project itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
